<resources>
    <string name="app_name">Ceria</string>
    <string name="hello_user">Hello, %1$s</string>
    <string name="listening_session">Listening Session</string>
    <string name="view_details">View Details</string>
    <string name="to_settings_page">To settings page</string>
    <string name="profile">Profile</string>
    <string name="liked_songs">Liked Songs</string>
    <string name="n_songs">%1$d songs</string>
    <string name="onboarding_description">New way for working out and listening to fantastic music at the same time.</string>
    <string name="motto_2">Listen.</string>
    <string name="motto_1">Practice.</string>
    <string name="get_started">Get Started!</string>
    <string name="login_with_spotify">Login with Spotify</string>
    <string name="spotify_not_found">Spotify client is not installed</string>
    <string name="install_now">Install Now</string>
    <string name="onboarding_welcome">Welcome to Ceria!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stopsessiontext">Stop Session</string>
    <string name="titlealbum">Title Song</string>
    <string name="groupalbum">Group Song</string>
    <string name="timestart">0:00</string>
    <string name="textbpm1">"Bored of this track?"</string>
    <string name="textbpm2">Next Track - Next Artist</string>
    <string name="bpmtext">%1$d bpm</string>
    <string name="textstopsession1">Fantastic workout!</string>
    <string name="textstopsession2">Here’s your summary</string>
    <string name="artist">Candy</string>
    <string name="album">NCT Dream</string>
    <string name="songsplayed">Songs Played</string>
    <string name="songsplayed2">20</string>
    <string name="avgheartrate">Avg Heartrate</string>
    <string name="avgheartrate2">90</string>
    <string name="avgheartrate3">bpm</string>
    <string name="duration">Duration</string>
    <string name="duration2">80</string>
    <string name="duration3">minutes</string>
    <string name="recyclestop">You’ve just listened to</string>
    <string name="overlaytext">Keep the beats going! We\'ll be here with more music anytime</string>
    <string name="back">Back</string>
    <string name="textprofile">Liked Songs</string>
    <string name="totallikedsongs">24 Songs</string>
    <string name="textaddsongs">Add Songs</string>
    <string name="textsetting">Setting</string>
    <string name="dark_mode">Mode Theme</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="increment_bpm">Increment bpm</string>
    <string name="decrement_bpm">Decrement bpm</string>
    <string name="listening_to_your_heartbeat">Listening to your heartbeat</string>
    <string name="error_when_starting_session">Error when starting session</string>
    <string name="find_music">Find in liked songs</string>
    <plurals name="favorite_count_plural">
        <item quantity="one">%d Song</item>
        <item quantity="other">%d Songs</item>
    </plurals>
    <string name="confirmation_logout_title">Logout Confirmation</string>
    <string name="confirmation_logout_message">Are you sure you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="played_n_songs">Played %1$d songs</string>
    <string name="session_id">Session %1$s</string>
    <string name="listennow">Listen Now</string>
    <string name="imready">I\'m Ready</string>
</resources>