<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.summary.SummaryFragment">


    <TextView
        android:id="@+id/textstopsession1"
        android:layout_width="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:layout_height="wrap_content"
        android:text="@string/textstopsession1"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textstopsession2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textstopsession2"
        android:textAlignment="textStart"
        android:fontFamily="@font/inter"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textstopsession1" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textstopsession2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:background="@drawable/circle_shape">

                <TextView
                    android:id="@+id/songsplayed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:text="@string/songsplayed2"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </FrameLayout>
            <FrameLayout
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:background="@drawable/circle_shape">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                <TextView
                    android:id="@+id/lastbpm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"

                    android:text="@string/songsplayed2"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:fontFamily="@font/poppins"
                    android:text="@string/avgheartrate3"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                     />
                </LinearLayout>
            </FrameLayout>
            <FrameLayout
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:background="@drawable/circle_shape">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                <TextView
                    android:id="@+id/minutes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/songsplayed2"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:fontFamily="@font/poppins"
                        android:text="@string/duration3"
                        android:textColor="#FFFFFF"
                        android:textSize="14sp"
                        />
                </LinearLayout>

            </FrameLayout>
        </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">
        <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="0dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/songsplayed"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:fontFamily="@font/inter_bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="0dp"
            android:text="@string/avgheartrate"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp" />
        <TextView
            android:fontFamily="@font/inter_bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:text="@string/duration"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginTop="8dp"
        android:text="@string/recyclestop"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="21sp"
        android:fontFamily="@font/inter_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_songs"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/overlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:listitem="@layout/item_songs">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/dark_bg"
        android:gravity="center"
        android:fontFamily="@font/inter_bold"
        android:paddingHorizontal="32dp"
        android:paddingVertical="10dp"
        android:text="@string/overlaytext"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
